API/feowl-api/logs/blogapp.log
ERROR 2012-05-24 18:48:54,561 base 65863 4335341568 Internal Server Error: /test
Traceback (most recent call last):
  File "/Library/Python/2.6/site-packages/django/core/handlers/base.py", line 89, in get_response
    response = middleware_method(request)
  File "/Library/Python/2.6/site-packages/django/middleware/common.py", line 67, in process_request
    if (not urlresolvers.is_valid_path(request.path_info, urlconf) and
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 531, in is_valid_path
    resolve(path, urlconf)
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 420, in resolve
    return get_resolver(urlconf).resolve(path)
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 298, in resolve
    for pattern in self.url_patterns:
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 328, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 323, in urlconf_module
    self._urlconf_module = import_module(self.urlconf_name)
  File "/Library/Python/2.6/site-packages/django/utils/importlib.py", line 35, in import_module
    __import__(name)
  File "/Users/stefan/Desktop/development/feowl/API/feowl-api/urls.py", line 17
     ('^test/$', TemplateView.as_view(template_name: 'test.html'))
                                                   ^
 SyntaxError: invalid syntax
ERROR 2012-05-24 18:48:54,900 base 65863 4335878144 Internal Server Error: /favicon.ico
Traceback (most recent call last):
  File "/Library/Python/2.6/site-packages/django/core/handlers/base.py", line 89, in get_response
    response = middleware_method(request)
  File "/Library/Python/2.6/site-packages/django/middleware/common.py", line 67, in process_request
    if (not urlresolvers.is_valid_path(request.path_info, urlconf) and
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 531, in is_valid_path
    resolve(path, urlconf)
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 420, in resolve
    return get_resolver(urlconf).resolve(path)
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 298, in resolve
    for pattern in self.url_patterns:
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 328, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 323, in urlconf_module
    self._urlconf_module = import_module(self.urlconf_name)
  File "/Library/Python/2.6/site-packages/django/utils/importlib.py", line 35, in import_module
    __import__(name)
  File "/Users/stefan/Desktop/development/feowl/API/feowl-api/urls.py", line 17
     ('^test/$', TemplateView.as_view(template_name: 'test.html'))
                                                   ^
 SyntaxError: invalid syntax
ERROR 2012-05-24 18:49:37,442 base 65893 4335341568 Internal Server Error: /test
Traceback (most recent call last):
  File "/Library/Python/2.6/site-packages/django/core/handlers/base.py", line 89, in get_response
    response = middleware_method(request)
  File "/Library/Python/2.6/site-packages/django/middleware/common.py", line 67, in process_request
    if (not urlresolvers.is_valid_path(request.path_info, urlconf) and
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 531, in is_valid_path
    resolve(path, urlconf)
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 420, in resolve
    return get_resolver(urlconf).resolve(path)
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 298, in resolve
    for pattern in self.url_patterns:
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 328, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 323, in urlconf_module
    self._urlconf_module = import_module(self.urlconf_name)
  File "/Library/Python/2.6/site-packages/django/utils/importlib.py", line 35, in import_module
    __import__(name)
  File "/Users/stefan/Desktop/development/feowl/API/feowl-api/urls.py", line 17
     url(r'^test/$', TemplateView.as_view(template_name: 'test.html'))
                                                       ^
 SyntaxError: invalid syntax
ERROR 2012-05-24 18:49:37,747 base 65893 4335878144 Internal Server Error: /favicon.ico
Traceback (most recent call last):
  File "/Library/Python/2.6/site-packages/django/core/handlers/base.py", line 89, in get_response
    response = middleware_method(request)
  File "/Library/Python/2.6/site-packages/django/middleware/common.py", line 67, in process_request
    if (not urlresolvers.is_valid_path(request.path_info, urlconf) and
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 531, in is_valid_path
    resolve(path, urlconf)
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 420, in resolve
    return get_resolver(urlconf).resolve(path)
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 298, in resolve
    for pattern in self.url_patterns:
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 328, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/Library/Python/2.6/site-packages/django/core/urlresolvers.py", line 323, in urlconf_module
    self._urlconf_module = import_module(self.urlconf_name)
  File "/Library/Python/2.6/site-packages/django/utils/importlib.py", line 35, in import_module
    __import__(name)
  File "/Users/stefan/Desktop/development/feowl/API/feowl-api/urls.py", line 17
     url(r'^test/$', TemplateView.as_view(template_name: 'test.html'))
                                                       ^
 SyntaxError: invalid syntax
